--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore the sensitive environment setup config file
+/config/heroku_env.rb
+
